--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -116,6 +116,8 @@
 .youtube-wrapper {
   position: relative;
   margin-top: 120px;
+  display: block;
+  margin: 0 auto;
 }
 
 .youtube-wrapper::after {
@@ -258,7 +260,7 @@
 .about-wrapper {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 200px;
   margin-bottom: 160px;
 }
