--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -68,6 +68,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  margin-bottom: 120px;
 }
 
 .hero-left-title {
@@ -115,7 +116,6 @@
 
 .youtube-wrapper {
   position: relative;
-  margin-top: 120px;
   display: block;
   margin: 0 auto;
 }
