--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -261,7 +261,7 @@
 .about-wrapper {
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 200px;
   margin-bottom: 160px;
 }
