--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 /* Container */
 .container {
   width: 100%;
-  max-width: 1150px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -138,10 +138,10 @@
   z-index: 9;
 }
 
-.youtube-iframe {
+.youtube-video {
   position: relative;
-  width: 1240px;
-  height: 660px;
+  width: 100%;
+  height: 40vw;
   border-radius: 10px;
   margin: 0 auto;
   z-index: 99;
@@ -260,7 +260,6 @@
 
 /* faculties responsive */
 
-
 /* faculties responsive */
 
 
@@ -272,6 +271,7 @@
   justify-content: space-between;
   margin-top: 200px;
   margin-bottom: 160px;
+  /* flex-wrap: wrap; */
 }
 
 .about-img-one {
@@ -657,26 +657,17 @@
 
 /* Swipper */
 
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
+.video-slider-btn-box {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+  width: 100%;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.video-slider-btn {
+  background: #f8ad52;
+  border-radius: 100%;
+  padding: 10px;
+  color: #fff;
 }
